FEATURE current queue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="browse_title">@string/app_name</string>
     <string name="playlists">Playlists</string>
     <string name="songs">Songs</string>
+    <string name="queue">Queue</string>
     <string name="albums">Albums</string>
     <string name="artists">Artists</string>
     <string name="starred">Starred</string>
