--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="controls">Controls</string>
     <string name="settings">Settings</string>
     <string name="settings_quality">Quality</string>
+    <string name="settings_quality_dialog">Choose Quality</string>
+    <string name="settings_quality_low">Low (96 kbit/s)</string>
+    <string name="settings_quality_normal">Normal (160 kbit/s)</string>
+    <string name="settings_quality_high">High (320 kbit/s)</string>
     <plurals name="playlist_nb_tracks">
         <item quantity="zero">no tracks</item>
         <item quantity="one">1 track</item>
