FEATURE Last FM PART 2 settings for credentials + make it work this time

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,10 @@
     <string name="settings_quality_low">Low (96 kbit/s)</string>
     <string name="settings_quality_normal">Normal (160 kbit/s)</string>
     <string name="settings_quality_high">High (320 kbit/s)</string>
+    <string name="settings_lastfm">last.fm</string>
+    <string name="settings_lastfm_dialog">Scrobble to last.fm</string>
+    <string name="settings_lastfm_username">Username</string>
+    <string name="settings_lastfm_password">Password</string>
     <string name="go_to_artist">Go To Artist</string>
     <plurals name="playlist_nb_tracks">
         <item quantity="zero">no tracks</item>
