FEATURE Last FM PART 6 Check username/password are valid in the settings dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="settings_quality_high">High (320 kbit/s)</string>
     <string name="settings_lastfm">last.fm</string>
     <string name="settings_lastfm_dialog">Scrobble to last.fm</string>
+    <string name="settings_lastfm_error_username_empty">Please enter a username</string>
+    <string name="settings_lastfm_error_password_empty">Please enter a password</string>
+    <string name="settings_lastfm_error_invalid">Invalid username or password</string>
     <string name="settings_lastfm_username">Username</string>
     <string name="settings_lastfm_password">Password</string>
     <string name="go_to_artist">Go To Artist</string>
