BUGFIX crashlytics #8 https://fabric.io/sregg-studio/android/apps/com.sregg.android.tv.spotify/issues/55ce3fc9e0d514e5d6fe3c5e fixed by saving current users in shared prefs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
         <item quantity="one">1 album</item>
         <item quantity="other">%d albums</item>
     </plurals>
+    <string name="login_error_message">Error while logging in. Please make sure you have internet connection and restart the app</string>
 </resources>
